# PtDAlgorithms

./: .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE.txt  NAMESPACE  README.md  R_LICENSE  ptdalgorithms.pc.in
R/: RcppExports.R  ptdalgorithms-package.r
api/c/: ptdalgorithms.h
api/cpp/: ptdalgorithmscpp.h
examples/: experiments.ipynb  full_api_example.ipynb  isolation_migration.ipynb  isolation_migration_model.cpp  rabbit_construction_c.cpp
man/: accumulated_visiting_time.Rd  add_edge.Rd  clone_graph.Rd  covariance.Rd  create_graph.Rd  create_vertex.Rd  ddph.Rd  defect.Rd  distribution_context.Rd  distribution_context_accumulated_visiting_time.Rd  distribution_context_state.Rd  distribution_context_step.Rd  distribution_context_stop_probability.Rd  dph.Rd  dph_accumulated_visits.Rd  dph_covariance.Rd  dph_distribution_context.Rd  dph_distribution_context_accumulated_visits.Rd  dph_distribution_context_state.Rd  dph_distribution_context_step.Rd  dph_distribution_context_stop_probability.Rd  dph_expectation.Rd  dph_expected_visits.Rd  dph_expected_waiting_time.Rd  dph_random_sample_stop_vertex.Rd  dph_reward_transform.Rd  dph_stop_probability.Rd  dph_variance.Rd  edges.Rd  expectation.Rd  expected_waiting_time.Rd  find_or_create_vertex.Rd  find_vertex.Rd  graph_as_dph_matrix.Rd  graph_as_matrix.Rd  graph_update_weights_parameterized.Rd  matrix_as_graph.Rd  moments.Rd  normalize_dph_graph.Rd  normalize_graph.Rd  (+16 more)
src/: Makevars.win  R.cpp  RcppExports.cpp  experiments.Rmd  experiments.cpp  generation.cpp  generation.h  io.cpp  io.h  phase.cpp  phase.h  ptdalgorithms.cpp  ptdalgorithms.h  ptdalgorithms_types.h  ptdalgortihms.cpp  test.cpp  tester.cpp
src/R/: R.cpp  RcppExports.cpp
src/c/: io.cpp  io.h  phase.cpp  ptdalgorithms.c  ptdalgorithms.cpp  ptdalgorithms.h
src/cpp/: ptdalgorithmscpp.cpp  ptdalgorithmscpp.h
test/: testR.R  testcpp.cpp  tester.cpp
